# APIModel/DTOs/ModifyServerDto.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace APIModel.DTOs
+{
+    public class ModifyServerDto
+    {
+        public string? NewName { get; set; }
+    }
+}
