# APIModel/DTOs/RegisterDto.cs
@@ -1,15 +1,14 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
+﻿using System.ComponentModel.DataAnnotations;
 
 namespace APIModel.DTOs
 {
-    public class RegisterDto
+    public class UserDataDto
     {
+        [Required]
         public ulong Id { get; set; }
+        [Required]
         public string? DiscordName { get; set; }
+        [Required]
         public string? ProfilePic { get; set; }
     }
 }
